Fixing spacing above cert card

--- a/src/views/homepage/components/featured-content-grid/certifications-featured-card.module.css
+++ b/src/views/homepage/components/featured-content-grid/certifications-featured-card.module.css
@@ -2,12 +2,6 @@
 	border: none;
 	padding-top: 0;
 	gap: 70px;
-	margin-top: 136px;
-
-	/* 1000px with 16px base font */
-	@media screen and (max-width: 62.5rem) {
-		margin-top: 64px;
-	}
 }
 
 /* TODO replace magic numbers with variables */
