--- a/src/views/homepage/components/featured-content-grid/featured-content-grid.module.css
+++ b/src/views/homepage/components/featured-content-grid/featured-content-grid.module.css
@@ -28,6 +28,12 @@
 
 .gridAreaB {
 	grid-area: b;
+	padding-top: 136px;
+
+	/* 1000px with 16px base font */
+	@media screen and (max-width: 62.5rem) {
+		padding-top: 64px;
+	}
 }
 
 .gridAreaC {
